@@ -1,3 +1,14 @@
+2011-11-24  Patrick Gansterer  <paroga@webkit.org>
+
+        [CMake] Add missing source files
+        https://bugs.webkit.org/show_bug.cgi?id=73052
+
+        Reviewed by Andreas Kling.
+
+        Add more generic files to the sources list and remove the EFL specific stuff.
+
+        * CMakeLists.txt:
+
 2011-11-21  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>
 
         [Qt][WK2] Move QQuickWebView::downloadRequested signal into experimental
